ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: deploy-ingress
    namespace: default
    annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/load-balancer-name: deploy-alb
      alb.ingress.kubernetes.io/healthcheck-path: /health
      alb.ingress.kubernetes.io/healthcheck-port: "8080"
      alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
      alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "3"
      alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
      alb.ingress.kubernetes.io/healthy-threshold-count: "2"
      alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
      alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=bucket-aaaa213123,access_logs.s3.prefix=prefix
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
      alb.ingress.kubernetes.io/ssl-redirect: '443'
      alb.ingress.kubernetes.io/security-groups: sg-07cc7f7a5dd66cbbd
      alb.ingress.kubernetes.io/manage-backend-security-group-rules: true
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:532003114460:certificate/45d41e79-3793-4320-b8ef-47fa487ba920
      alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
      alb.ingress.kubernetes.io/actions.response-403: >
        {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403"}}
spec:
  rules:
    - http:
        paths:
          - path: /v1/
            pathType: Prefix
            backend:
              service:
                name: deploy-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: response-403
                port:
                  name: use-annotation
